Fixed CSS for pre on safari

--- a/static/css/posts.css
+++ b/static/css/posts.css
@@ -2,6 +2,7 @@ pre {
     font-family: var(--bs-body-font-family);
     font-size: var(--bs-body-font-size);
     word-wrap: normal;
+    overflow-wrap: normal;
 }
 
 pre img {
